# chess

./: .gitignore  Cargo.toml  README.md  config_example.json  puzzles.txt
src/: config.rs  main.rs
src/chess/: board.rs  colour.rs  fen_parser.rs  mod.rs  move.rs  piece.rs  piece_kind.rs  position.rs  position_iter.rs
src/engine/: board_frame.rs  engine.rs  engine_config.rs  evaluated.rs  evaluator.rs  game.rs  mod.rs  puzzles.rs
src/lichess/: event_stream.rs  game_stream.rs  mod.rs
src/lichess/data/: challenge.rs  chat_line.rs  clock.rs  event.rs  game.rs  game_full.rs  game_start.rs  game_state.rs  mod.rs  time_control.rs  user.rs  variant.rs
