[package]
name = "chess_bot3"
version = "0.1.0"
authors = ["Ruairidh Williamson <williamsonruairidh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
rand = "0.7.3"